src/main/java/com/example/exception/error/stackoverflowerror/Vehicle.java
package com.example.exception.error.stackoverflowerror;

public class Vehicle {

    public void accelerate(float acceleration, float maxVelocity) {
        // set the acceleration
    }
}
